# cognitive-sparks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_KR.md  post_sideproject.md  pyproject.toml
benchmarks/: run_all.py
benchmarks/code/data/: microservices.txt  refactoring.txt
benchmarks/creative/data/: storytelling.txt
benchmarks/science/data/: evolution.txt  photosynthesis.txt
demo/claude_code_posts/: 01_harness_architecture.txt  02_orchestration_masterclass.txt  03_source_code_deep_dive.txt
experiments/: run_experiments.py
src/sparks/: __init__.py  api.py  autonomic.py  checkpoint.py  circuit.py  cli.py  configurator.py  context.py  cost.py  data.py  engine.py  events.py  evolution.py  explain.py  lens.py  llm.py  loop.py  nervous.py  output.py  persistence.py  research.py  self_optimize.py  similarity.py  state.py  wiki.py
src/sparks/integrations/: stockllm.py
src/sparks/tools/: __init__.py  abstract.py  analogize.py  base.py  body_think.py  empathize.py  imagine.py  model_tool.py  observe.py  patterns.py  play.py  shift_dimension.py  synthesize.py  transform.py
